Creating and editing a student should not show relationship [fix] the family card edit page should have a cancel button
[Deliver #38419667, #36233527]
Closes #43

LGTM given by: @nhance

Squashed commit of the following:

commit f6d469083d484f58c451af611e5f120b441d4090
Author: Valentino <valentino@reenhanced.com>
Date:   Thu Oct 25 11:15:35 2012 -0400

    Updated cancel buttons to use .live

commit 69d38293bd45add559f8e703857b5364c292b997
Author: Valentino <valentino@reenhanced.com>
Date:   Thu Oct 25 11:06:20 2012 -0400

    Add cancel button to family member and student edit forms

commit 3f32a6d003483cf5fc23dcc7216a1bbcf1b7c8ac
Author: Valentino <valentino@reenhanced.com>
Date:   Thu Oct 25 09:55:49 2012 -0400

    [fix] the family card edit page should have a cancel button

commit 23b9dde63e27ee94ae172602c40c6f2885b97b3c
Author: Valentino <valentino@reenhanced.com>
Date:   Thu Oct 25 09:44:00 2012 -0400

    Creating and editing a student should not show relationship

--- a/app/assets/stylesheets/bootstrap_overrides.css.sass
+++ b/app/assets/stylesheets/bootstrap_overrides.css.sass
@@ -10,3 +10,18 @@
 #all-students table > tbody > tr.student-edit-form > td .collapse.in,
 #all-family-members table > tbody > tr.family-member-edit-form > td .collapse.in
   border-top: 1px solid #DDD
+
+body .btn
+  background: #0080c7
+  color: white
+  text-shadow: none
+  border-width: 0
+  &:hover
+    background: rgb(4, 139, 214)
+    color: white
+
+body .btn.btn-warning
+  background: inherit
+  background-color: grey
+  &:hover
+    background-color: #999
