--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -94,13 +94,6 @@ dt {
 	text-align: left !important;
 }
 
-.btn {
-	background: #0080c7 !important;
-	color: #fff !important;
-	text-shadow: none !important;
-	border-width: 0 !important;
-}
-
 .container {
 	padding-top: 10px;
 }
